--- a/package.json
+++ b/package.json
@@ -11,7 +11,29 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "next": "14.2.4",
+    "@auth/mongodb-adapter": "^3.2.0",
+        "@hookform/resolvers": "^3.6.0",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@tabler/icons-react": "^3.6.0",
+        "@types/bcryptjs": "^2.4.6",
+        "@types/next-auth": "^3.15.0",
+        "bcryptjs": "^2.4.3",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "embla-carousel-react": "^8.1.5",
+        "framer-motion": "^11.2.10",
+        "mongodb": "^6.7.0",
+        "mongoose": "^8.4.1",
+        "next-auth": "^4.24.7",
+        "react-hook-form": "^7.51.5",
+        "react-icons": "^5.2.1",
+        "sharp": "^0.33.4",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
   },
   "devDependencies": {
     "postcss": "^8",
