--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/next-auth": "^3.15.0",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
