--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "framer-motion": "^11.2.12",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -39,6 +39,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.2.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
