--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.6.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/next-auth": "^3.15.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "bcryptjs": "^2.4.3",
@@ -45,7 +43,6 @@
   "devDependencies": {
     "@types/node": "20.14.9",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.5.2"
+    "tailwindcss": "^3.4.1"
   }
 }
